--- a/gulimall-member/pom.xml
+++ b/gulimall-member/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.atguigu.gulimall</groupId>
-    <artifactId>gulimall-order</artifactId>
+    <artifactId>gulimall-memeber</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gulimall-order</name>
-    <description>Demo project for Spring Boot</description>
+    <name>gulimall-memeber</name>
+    <description>谷粒商城-会员服务</description>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>2021.0.2</spring-cloud.version>
